--- a/style.css
+++ b/style.css
@@ -43,7 +43,9 @@ margin: 0px 15px 0px 15px;;
     outline: none;
     border:3px solid #5405af;
 }
-
+.taskDelete{
+    float: right;
+}
 
 
 .list{
